--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,76 @@
 
   /* Mobile Navigation Spacing - Responsive */
   --mobile-nav-gap: 2rem; /* Default spacing */
+
+  /* Base Color Palette */
+  --color-primary: #c5441f;
+  --color-primary-light: #e15023;
+  --color-white: #F7F7F7;
+  --color-off-white:  #f6f6f2;
+  --color-gray-light: #BCBCBC;
+  --color-gray-dark: #666666;
+  --color-black: #121212;
+
+
+  /* Section Background Colors */
+  --section-background-color-primary: var(--color-white);
+  --section-background-color-secondary: var(--color-off-white);
+
+  /* Section Background Colors */
+  --section-background-color-primary: var(--color-white);
+  --section-background-color-secondary: var(--color-off-white);
+
+  /* Font Colors */
+  --placeholder-color: var(--color-gray-light);
+
+  /* Navigation Colors */
+
+    /* Hero Section Colors */
+      --nav-link-color-hero: var(--color-black);
+      --nav-link-hover-color-hero: var(--color-primary);
+
+      --nav-link-dropdown-color-hero: var(--color-black);
+      --nav-link-dropdown-hover-color-hero: var(--color-primary);
+
+      --nav-link-dropdown-background-color-hero: var(--color-white);
+      --nav-link-dropdown-background-hover-color-hero: var(--color-white);
+
+      /* Base Navigation Colors */
+      --nav-link-color: var(--color-primary);
+      --nav-link-hover-color: var(--color-black);
+
+      --nav-link-dropdown-color: var(--color-primary);
+      --nav-link-dropdown-hover-color: var(--color-primary-light);
+
+      --nav-link-dropdown-background-color: var(--color-white);
+      --nav-link-dropdown-background-hover-color: var(--color-primary);
+
+
+
+  /* Button Colors */
+
+  /* Primary Button */
+
+    /* Primary Button Background Colors */
+    --button-background-color-primary: var(--color-primary);
+    --button-hover-background-color-primary: var(--color-primary-light);
+
+    /* Primary Button Text Colors */
+    --button-text-color-primary: var(--color-white);
+    --button-hover-text-color-primary: var(--color-white);
+
+
+  /* Secondary Button */
+
+    /* Secondary Button Background Colors */
+    --button-background-color-secondary: var(--color-white);
+    --button-hover-background-color-secondary: var(--color-primary);
+
+    /* Secondary Button Text Colors*/
+    --button-text-color-secondary: var(--color-black);
+    --button-hover-text-color-secondary: var(--color-white);
+
+
 }
 
 /* Ensure proper body and html structure */
